2010-08-18  Sam Steingold  <sds@gnu.org>

	* clisp.spec: remove obsolete file, it has not been used for many
	years, most linux distributions now offer clisp themselves

2010-08-17  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (prepare_dynamic_module): better comment placement
	in reqfile; do not call set_dynamic_module_location; append the
	names of the new files to DYNDIR_FILES
	(add, install): call set_dynamic_module_location outside of the loop
	(install): handle DESTDIR correctly, install DYNDIR_FILES there
	* makemake.in (install-modules) [with_dynamic_modules]: new target,
	allows "a la carte" module installation
	(install-bin) [with_dynamic_modules]: depend on install-modules

2010-08-16  Sam Steingold  <sds@gnu.org>

	fix 2010-07-09 ${DESTDIR} patch which broke "make install DESTDIR=...":
	only respect DESTDIR in "install", not in "add" mode
	* clisp-link.in (try_set_LIBDIR): extract from ...
	(set_dynamic_module_location): use try_set_LIBDIR;
	accept DESTDIR as an argument
	(prepare_dynamic_module): accept DESTDIR as an argument
	(add): pass "" as the DESTDIR to prepare_dynamic_module
	(install): pass DESTDIR as DESTDIR to prepare_dynamic_module

2010-08-16  Sam Steingold  <sds@gnu.org>

	* clisp-link.in: revert the 2010-07-09 ${DESTDIR} patch because it
	breaks "make install DESTDIR=..."

2010-08-13  Sam Steingold  <sds@gnu.org>

	* type.lisp (typep-number-test, c-typep-number): reuse error string
	* init.lisp: use reader (#1#) instead of let for the list of
	exported MOP symbols

2010-08-09  Sam Steingold  <sds@gnu.org>

	* condition.lisp (clos-style-warning, clos-novice-warning)
	(class-obsolescence-warning): add
	(gf-already-called-warning, gf-replacing-method-warning): inherit
	from CLOS-STYLE-WARNING, not CLOS-WARNING
	* init.lisp, clos-package.lisp (clos-style-warning)
	(clos-novice-warning, class-obsolescence-warning): export
	* clos-class3.lisp (defclass):
	the novice warning is now of type CLOS-NOVICE-WARNING;